--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ tokio = { version = "1.38.0", features = ["full"] }
 reqwest = { version = "0.11.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = "0.4"
+regex = "1"
